--- a/infos-tarifs.html
+++ b/infos-tarifs.html
@@ -1,56 +1,91 @@
 <!DOCTYPE html>
-
-<html data-theme="ludus" lang="fr">
+<html lang="fr" data-theme="autumn">
 <head>
-<meta charset="utf-8"/>
-<!-- Google Tag Manager -->
-<script data-cookie-category="analytics" data-src="https://www.googletagmanager.com/gtm.js?id=GTM-WMCMP74V" type="text/plain"></script>
-<!-- End Google Tag Manager -->
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Infos &amp; Tarifs de l'Académie de Jeux Vidéo | Ludus Mentis</title>
-<meta content="Consultez les informations pratiques de nos modules de 7 semaines pour jeunes de 10 à 15 ans. Tarif, structure des ateliers et inscription à Walhain." name="description"/>
-<meta content="tarif stage jeu vidéo, prix académie esport, inscription, informations pratiques, module 7 semaines" name="keywords"/>
-<link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
-<script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script><link href="assets/css/theme.css" rel="stylesheet"/><script defer="True" src="assets/js/theme.js"></script></head>
-<body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe class="" height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
-<div id="header"></div>
-<main class="container mx-auto px-4 py-8 space-y-8 space-y-12 md:space-y-12" id="main">
-<section class="section hero">
-<h1 class="text-4xl md:text-5xl font-bold">Académie : Informations et Tarifs</h1>
-<p>Découvrez notre programme de modules thématiques conçus pour transformer la pratique du jeu vidéo en une véritable compétence de vie. Pour toute autre question, <a class="btn btn-primary" href="contact.html">n'hésitez pas à nous contacter</a>.</p>
-</section>
-<section class="section card"><div class="card-body prose max-w-none">
-<h2 class="text-3xl font-bold mt-2">Structure de nos modules</h2>
-<ul>
-<li><strong>Format :</strong> Chaque module est un cycle complet de <strong>7 semaines</strong>.</li>
-<li><strong>Fréquence :</strong> Les ateliers durent <strong>2 heures</strong> et ont lieu une fois par semaine.</li>
-<li><strong>Pour qui :</strong> Les jeunes de 10 à 15 ans, prêts à découvrir le jeu sous un nouvel angle.</li>
-<li><strong>Objectif :</strong> Se concentrer sur un aspect clé de la performance et du bien-être, et explorer une large palette de jeux coopératifs.</li>
-</ul>
-</div></section>
-<section class="section card"><div class="card-body prose max-w-none">
-<h2 class="text-3xl font-bold mt-2">Un module, un objectif</h2>
-<p>Notre programme est découpé en modules thématiques. Chaque module de 7 semaines est une aventure en soi, centrée sur le développement d'une compétence spécifique à travers le jeu.</p>
-<p>Les thèmes abordés incluent, par exemple :</p>
-<ul>
-<li><strong>La préparation :</strong> Apprendre à définir un objectif d'équipe avant de lancer la partie.</li>
-<li><strong>L'échauffement :</strong> Maîtriser des techniques de concentration et de communication.</li>
-<li><strong>La performance :</strong> Gérer son stress et sa communication en pleine action.</li>
-<li><strong>L'analyse :</strong> Savoir débriefer une partie pour en tirer des leçons concrètes.</li>
-</ul>
-<p>Cette approche permet à votre enfant non seulement de s'améliorer, mais aussi de découvrir une grande variété de jeux, chacun servant d'outil pour un apprentissage ciblé.</p>
-</div></section>
-<section class="section card text-center"><div class="card-body prose max-w-none">
-<h2 class="text-3xl font-bold mt-2">Tarif et Inscription</h2>
-<p class="" style="font-size: 1.5em; font-weight: 600; color: var(--clr-accent-dark); margin-bottom: 0.5em;">230 € par module</p>
-<p>Ce tarif unique comprend les 7 ateliers de 2 heures, l'encadrement, l'accès à tout le matériel et l'assurance.</p>
-<a class="btn btn-primary mt-4" href="contact.html">Demander les dates du prochain module</a>
-</div></section>
-</main>
-<div id="footer"></div>
-<script src="assets/js/include.js"></script>
-<script defer="True" src="assets/js/cookie-consent.js"></script></body>
+  <meta charset="UTF-8">
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
+  <!-- End Google Tag Manager -->
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Infos & tarifs de l'académie de jeux vidéo | Ludus Mentis</title>
+  <meta name="description" content="Consultez les informations pratiques de nos modules de 7 semaines pour jeunes de 10 à 15 ans. Tarif, structure des ateliers et inscription à Walhain.">
+  <meta name="keywords" content="tarif stage jeu vidéo, prix académie esport, inscription, informations pratiques, module 7 semaines">
+  
+  <!-- DaisyUI + Tailwind CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  
+  <!-- Configuration Tailwind -->
+  <script>
+    tailwind.config = {
+      darkMode: 'class',
+      theme: {
+        extend: {
+          colors: {
+            primary: '#fb923c',
+            'primary-focus': '#ea580c',
+            secondary: '#fbbf24',
+            accent: '#ef4444',
+          },
+          fontFamily: {
+            'sans': ['Inter', 'system-ui', '-apple-system', 'sans-serif'],
+            'display': ['Space Grotesk', 'system-ui', 'sans-serif'],
+          }
+        }
+      }
+    }
+  </script>
+  
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
+  
+  <!-- Custom styles -->
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
+</head>
+<body class="min-h-screen bg-base-100">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  
+  <div id="header"></div>
+  
+  <main class="container mx-auto px-4 py-10">
+    <section class="max-w-3xl mx-auto">
+      <h1 class="text-4xl font-extrabold mb-6">Infos & tarifs</h1>
+      <div class="card bg-base-100 shadow mb-6">
+        <div class="card-body">
+          <h2 class="card-title">Forfait programme</h2>
+          <p>Le tarif couvre l’encadrement, le matériel, les activités hors‑écran et le suivi éducatif.</p>
+          <ul class="list-disc ml-5 mt-2">
+            <li>Semaine complète (5 jours)</li>
+            <li>Groupes à effectif limité</li>
+            <li>Jeux coopératifs et activités physiques/créatives</li>
+          </ul>
+        </div>
+      </div>
+      <div class="alert">
+        <span><strong>Accessibilité :</strong> le prix ne doit pas être un frein. Des facilités et quelques places solidaires peuvent être envisagées — parlons‑en.</span>
+      </div>
+      <div class="mt-6">
+        <h3 class="text-2xl font-bold mb-2">Attestation pour mutualité</h3>
+        <p>Nous fournissons une <strong>attestation de participation</strong>. Certaines mutualités remboursent partiellement des stages jeunesse/sport. Renseignez‑vous auprès de la vôtre.</p>
+      </div>
+      <div class="mt-8 flex gap-3">
+        <a href="contact.html" class="btn btn-primary text-white">Poser une question</a>
+        <a href="faq.html" class="btn btn-outline">Lire la FAQ</a>
+      </div>
+    </section>
+    </main>
+  
+  <div id="footer"></div>
+  <script src="assets/js/include.js"></script>
+</body>
 </html>
