--- a/faq.html
+++ b/faq.html
@@ -1,63 +1,99 @@
 <!DOCTYPE html>
-
-<html data-theme="ludus" lang="fr">
+<html lang="fr" data-theme="autumn">
 <head>
-<meta charset="utf-8"/>
-<!-- Google Tag Manager -->
-<script data-cookie-category="analytics" data-src="https://www.googletagmanager.com/gtm.js?id=GTM-WMCMP74V" type="text/plain"></script>
-<!-- End Google Tag Manager -->
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>FAQ - Questions Fréquentes sur nos Ateliers | Ludus Mentis</title>
-<meta content="Nos réponses à vos questions : à qui s'adressent nos ateliers, la place de la compétition, comment s'inscrire... Tout ce que les parents doivent savoir." name="description"/>
-<meta content="FAQ, questions fréquentes, parents, compétition esport, inscription, bienveillance" name="keywords"/>
-<link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
-<script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script><link href="assets/css/theme.css" rel="stylesheet"/><script defer="True" src="assets/js/theme.js"></script></head>
-<body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe class="" height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
-<div id="header"></div>
-<main class="container mx-auto px-4 py-8 space-y-8 space-y-12 md:space-y-12" id="main"><section class="hero bg-base-200"><div class="hero-content flex-col md:flex-row gap-8 items-center"><div class="max-w-3xl mx-auto py-8 md:py-12"><h1 class="text-4xl md:text-5xl font-bold leading-tight">Foire aux questions</h1><p class="mt-4 opacity-80">Vous trouverez ici les réponses aux questions les plus fréquentes sur notre académie. 
-         Si votre question ne figure pas ici, contactez-nous : 
-         nous nous ferons un plaisir d’y répondre.</p><div class="mt-6 flex flex-wrap gap-3 justify-center"><a class="btn btn-primary btn-lg" href="academie.html">Découvrir notre académie</a><a class="btn btn-outline btn-lg" href="infos-tarifs.html">Infos &amp; Tarifs</a></div></div><img alt="Illustration Ludus Mentis" class="max-w-xs md:max-w-sm w-full h-auto" src="assets/images/illustrations/hero.svg"/></div></section>
-<section class="section card"><div class="card-body prose max-w-none">
-</div></section>
-<section class="section card"><div class="card-body prose max-w-none">
-<h2 class="text-3xl font-bold mt-2">À qui s’adresse Ludus Mentis ?</h2>
-<p>
-        Aux jeunes de <strong>10 à 15 ans</strong>, qu’ils soient passionnés de jeux vidéo, joueurs occasionnels, 
-        ou simplement curieux.  
-        Notre programme s’adapte à chaque profil : les plus expérimentés y trouvent 
-        des défis et du développement personnel, tandis que les débutants découvrent 
-        les bases de la coopération, de la communication et du respect en ligne.
-      </p>
-</div></section>
-<section class="section card"><div class="card-body prose max-w-none">
-<h2 class="text-3xl font-bold mt-2">Est-ce qu’il y a de la compétition ?</h2>
-<p>
-        Notre priorité est <strong>l’esprit d’équipe</strong> et la progression individuelle.  
-        Certains ateliers incluent des défis ludiques ou des tournois internes, mais toujours dans un cadre 
-        <em>positif</em> : l’objectif est d’apprendre à gérer la pression, à collaborer et à respecter l’adversaire.  
-        Nous voulons former des joueurs capables de gagner… et de perdre, avec le même fair-play.
-      </p>
-</div></section>
-<section class="section card"><div class="card-body prose max-w-none">
-<h2 class="text-3xl font-bold mt-2">Comment s’inscrire ?</h2>
-<p>
-        Remplissez simplement le <a class="btn btn-primary" href="contact.html">formulaire de contact</a> ou envoyez un mail à 
-        <a href="mailto:info@ludusmentis.be">info@ludusmentis.be</a>.  
-        Nous reviendrons vers vous rapidement avec les informations sur les prochaines sessions, 
-        les places disponibles et les modalités de participation.
-      </p>
-</div></section>
-<section class="section card"><div class="card-body prose max-w-none">
-<h2 class="text-3xl font-bold mt-2">Et pour les parents inquiets ?</h2>
-<p>
-       Notre priorité absolue est le développement de l'esprit d'équipe dans un cadre positif. Nous ne nous focalisons pas sur la compétition. Cependant, nous envisageons à terme de proposer une filière plus compétitive, accessible uniquement aux jeunes ayant démontré une maturité, un fair-play et une gestion émotionnelle exemplaires
-      </p>
-</div></section>
-</main>
-<div id="footer"></div>
-<script src="assets/js/include.js"></script>
-<script defer="True" src="assets/js/cookie-consent.js"></script></body>
+  <meta charset="UTF-8">
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
+  <!-- End Google Tag Manager -->
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FAQ - Questions fréquentes | Ludus Mentis</title>
+  <meta name="description" content="Toutes les réponses à vos questions : âge requis, déroulement des ateliers, tarifs, place de la compétition. Tout ce que les parents doivent savoir.">
+  <meta name="keywords" content="FAQ, questions fréquentes, parents, inscription, ateliers jeux vidéo, Walhain">
+  
+  <!-- DaisyUI + Tailwind CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  
+  <!-- Configuration Tailwind -->
+  <script>
+    tailwind.config = {
+      darkMode: 'class',
+      theme: {
+        extend: {
+          colors: {
+            primary: '#ea580c',
+            'primary-focus': '#c2410c',
+            secondary: '#f59e0b',
+            accent: '#ef4444',
+          },
+          fontFamily: {
+            'sans': ['Inter', 'system-ui', '-apple-system', 'sans-serif'],
+            'display': ['Space Grotesk', 'system-ui', 'sans-serif'],
+          }
+        }
+      }
+    }
+  </script>
+  
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
+  
+  <!-- Custom styles -->
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
+</head>
+<body class="min-h-screen bg-base-100">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  
+  <div id="header"></div>
+  
+  <main class="container mx-auto px-4 py-10">
+    <section class="max-w-4xl mx-auto">
+      <h1 class="text-4xl font-extrabold mb-6">FAQ</h1>
+      <div class="join join-vertical w-full">
+        <div class="collapse collapse-arrow join-item border border-base-300">
+          <input type="checkbox" />
+          <div class="collapse-title text-lg font-medium">Est‑ce adapté si mon enfant joue « trop » ?</div>
+          <div class="collapse-content"><p>Notre cadre aide à réguler les usages grâce à des règles claires, des pauses, et un travail sur les compétences (gestion du temps, communication). En cas de souffrance, nous orientons vers des professionnels.</p></div>
+        </div>
+        <div class="collapse collapse-arrow join-item border border-base-300">
+          <input type="checkbox" />
+          <div class="collapse-title text-lg font-medium">Est‑ce une thérapie ?</div>
+          <div class="collapse-content"><p>Non. C’est un programme éducatif de groupe. Nous ne posons pas de diagnostic et ne réalisons pas de suivi clinique.</p></div>
+        </div>
+        <div class="collapse collapse-arrow join-item border border-base-300">
+          <input type="checkbox" />
+          <div class="collapse-title text-lg font-medium">Y a‑t‑il des jeux violents ?</div>
+          <div class="collapse-content"><p>Non. Les jeux sont sélectionnés pour leur dimension coopérative et leur adéquation à l’âge.</p></div>
+        </div>
+        <div class="collapse collapse-arrow join-item border border-base-300">
+          <input type="checkbox" />
+          <div class="collapse-title text-lg font-medium">Comment se passe une séance ?</div>
+          <div class="collapse-content"><p>Rituels d’ouverture, séquence de jeu encadrée, débrief (émotions, communication, règles), puis activité hors‑écran et transfert vers le quotidien.</p></div>
+        </div>
+        <div class="collapse collapse-arrow join-item border border-base-300">
+          <input type="checkbox" />
+          <div class="collapse-title text-lg font-medium">Et si ça ne convient pas ?</div>
+          <div class="collapse-content"><p>On en parle. Nous proposons des ajustements et, si nécessaire, des pistes d’orientation.</p></div>
+        </div>
+      </div>
+      <div class="mt-8">
+        <a href="contact.html" class="btn btn-primary text-white">Je pose ma question</a>
+      </div>
+    </section>
+    </main>
+  
+  <div id="footer"></div>
+  <script src="assets/js/include.js"></script>
+</body>
 </html>
