--- a/educateurs.html
+++ b/educateurs.html
@@ -58,6 +58,22 @@
   <div id="header"></div>
 
   <main class="container">
+
+<section class="card bg-base-100 shadow mb-8">
+  <div class="card-body">
+    <h2 class="card-title">Notre approche n’est pas “encore plus d’écrans”</h2>
+    <ul class="list-disc ml-5 text-gray-700">
+      <li>Jeux coopératifs et adaptés à l’âge</li>
+      <li>Alternance écran / hors-écran (pauses actives, activités physiques et créatives)</li>
+      <li>Débriefs sur les émotions, la communication et la gestion du temps</li>
+      <li>Transfert vers la vie réelle (maison, école, amis)</li>
+    </ul>
+    <div class="mt-3">
+      <a href="parents.html" class="btn btn-outline">Voir la page Parents</a>
+    </div>
+  </div>
+</section>
+
     <section class="section hero">
       <h1>Un allié pour l'école et les éducateurs</h1>
       <p>Vous êtes enseignant, directeur d'établissement, ou acteur du monde éducatif ? Cet espace vous est dédié. Découvrez comment la méthode Ludus Mentis crée des ponts entre la passion du jeu vidéo et les compétences essentielles à la réussite scolaire et sociale de vos élèves.</p>
