--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <!-- Hero Section Améliorée -->
         <section class="hero bg-gradient-to-br from-orange-50 to-amber-50 rounded-3xl p-8 lg:p-12 mb-12">
             <div class="text-center max-w-4xl mx-auto">
-                <img src="assets/images/Ludus-Mentis-transparent.png" alt="Logo Ludus Mentis" class="w-32 mx-auto mb-6 hover:scale-105 transition-transform" />
+                <span class="inline-block text-2xl font-extrabold text-orange-600 mb-4">Ludus Mentis</span>
                 <h1 class="text-4xl lg:text-6xl font-bold mb-6 bg-gradient-to-r from-orange-400 to-orange-600 bg-clip-text text-transparent">
                     Et si le jeu vidéo aidait votre enfant à grandir ?
                 </h1>
@@ -221,12 +221,8 @@
                 la prévention et l'innovation pédagogique.
             </p>
             <div class="flex flex-wrap justify-center items-center gap-8">
-                <a href="https://www.walhain.be/" target="_blank" rel="noopener" class="hover:scale-105 transition-transform">
-                    <img src="assets/images/logo_walhain.png" alt="Logo commune de Walhain" class="h-20">
-                </a>
-                <a href="https://besf.be/" target="_blank" rel="noopener" class="hover:scale-105 transition-transform">
-                    <img src="assets/images/logo_besf.png" alt="Logo fédération belge d'esport" class="h-20">
-                </a>
+                <a href="https://www.walhain.be/" target="_blank" rel="noopener" class="badge badge-outline badge-lg">Commune de Walhain</a>
+                <a href="https://besf.be/" target="_blank" rel="noopener" class="badge badge-outline badge-lg">BESF</a>
             </div>
         </section>
 
