--- a/parents.html
+++ b/parents.html
@@ -103,31 +103,7 @@
     </ul>
   </section>
 
-  <section class="mb-10">
-    <h3 class="text-2xl font-bold mb-3">FAQ rapide</h3>
-    <div class="join join-vertical w-full">
-      <div class="collapse collapse-arrow join-item border border-base-300">
-        <input type="checkbox" />
-        <div class="collapse-title text-lg font-medium">Est‑ce adapté si mon enfant joue « trop » ?</div>
-        <div class="collapse-content"><p>Oui, si l’objectif est d’apprendre un usage plus sain dans un cadre éducatif. En cas de détresse ou de souffrance, nous orientons.</p></div>
-      </div>
-      <div class="collapse collapse-arrow join-item border border-base-300">
-        <input type="checkbox" />
-        <div class="collapse-title text-lg font-medium">Y a‑t‑il des jeux violents ?</div>
-        <div class="collapse-content"><p>Non. Nous choisissons des jeux coopératifs et appropriés à l’âge.</p></div>
-      </div>
-      <div class="collapse collapse-arrow join-item border border-base-300">
-        <input type="checkbox" />
-        <div class="collapse-title text-lg font-medium">Combien d’écrans par jour ?</div>
-        <div class="collapse-content"><p>Le jeu est un moyen, pas une fin. Les séances alternent avec des activités hors‑écran et des pauses actives.</p></div>
-      </div>
-      <div class="collapse collapse-arrow join-item border border-base-300">
-        <input type="checkbox" />
-        <div class="collapse-title text-lg font-medium">Qui encadre ?</div>
-        <div class="collapse-content"><p>Une équipe éducative formée à la gestion de groupe, à la communication bienveillante et à l’hygiène numérique.</p></div>
-      </div>
-    </div>
-  </section>
+  <section class="mb-10"><h3 class="text-2xl font-bold mb-3">Questions fréquentes</h3><p class="text-gray-700">Retrouvez toutes les réponses dans notre <a class="link link-primary" href="faq.html">FAQ</a>.</p></section>
 
   <section class="text-center">
     <div class="join">
