--- a/methodologie.html
+++ b/methodologie.html
@@ -58,6 +58,22 @@
   <div id="header"></div>
   
   <main class="container mx-auto px-4 py-8">
+
+<section class="card bg-base-100 shadow mb-8">
+  <div class="card-body">
+    <h2 class="card-title">Notre approche n’est pas “encore plus d’écrans”</h2>
+    <ul class="list-disc ml-5 text-gray-700">
+      <li>Jeux coopératifs et adaptés à l’âge</li>
+      <li>Alternance écran / hors-écran (pauses actives, activités physiques et créatives)</li>
+      <li>Débriefs sur les émotions, la communication et la gestion du temps</li>
+      <li>Transfert vers la vie réelle (maison, école, amis)</li>
+    </ul>
+    <div class="mt-3">
+      <a href="parents.html" class="btn btn-outline">Voir la page Parents</a>
+    </div>
+  </div>
+</section>
+
     <!-- Hero Section -->
     <section class="hero bg-gradient-to-br from-orange-50 to-amber-50 rounded-3xl p-8 lg:p-12 mb-8 border-2 border-orange-200">
       <div class="text-center max-w-4xl mx-auto">
