--- a/ados.html
+++ b/ados.html
@@ -72,33 +72,39 @@
   <main class="container mx-auto px-4 py-10">
 <section class="text-center max-w-3xl mx-auto mb-12">
   <h1 class="text-4xl font-extrabold mb-4">Joue, progresse, viens avec tes potes 🎮</h1>
-  <p class="text-lg text-gray-700">Ici, on joue en équipe, on apprend des trucs utiles (sans s'en rendre compte) et on s'éclate aussi en dehors des écrans.</p>
+  <p class="text-lg text-gray-700">On joue en équipe, on apprend sans s'en rendre compte et on s'éclate aussi en dehors des écrans.</p>
 </section>
 
-<section class="grid md:grid-cols-3 gap-6">
-  <div class="card bg-base-100 shadow">
-    <div class="card-body">
-      <h2 class="card-title">Coop & Respect</h2>
-      <p>Des jeux choisis pour la coopération, l'écoute et le fair play.</p>
-    </div>
-  </div>
-  <div class="card bg-base-100 shadow">
-    <div class="card-body">
-      <h2 class="card-title">Défis & Fun</h2>
-      <p>Des objectifs clairs, des pauses actives et des mini-challenges IRL.</p>
-    </div>
-  </div>
-  <div class="card bg-base-100 shadow">
-    <div class="card-body">
-      <h2 class="card-title">Ambiance safe</h2>
-      <p>Un encadrement bienveillant et des règles simples pour que tout le monde passe un bon moment.</p>
-    </div>
-  </div>
+<section class="grid md:grid-cols-3 gap-6 mb-10">
+  <div class="card bg-base-100 shadow"><div class="card-body"><h2 class="card-title">Coop & Fair-play</h2><p>Des jeux choisis pour l'écoute, l'entraide et la stratégie d'équipe.</p></div></div>
+  <div class="card bg-base-100 shadow"><div class="card-body"><h2 class="card-title">Défis & Pauses actives</h2><p>Des objectifs clairs, des challenges fun et des activités hors écran.</p></div></div>
+  <div class="card bg-base-100 shadow"><div class="card-body"><h2 class="card-title">Ambiance safe</h2><p>Encadrement bienveillant, règles simples, respect des autres et de soi.</p></div></div>
 </section>
 
-<section class="mt-10 text-center">
+<section class="max-w-4xl mx-auto mb-10">
+  <h3 class="text-2xl font-bold mb-3">À quoi ça ressemble ?</h3>
+  <ul class="steps steps-vertical lg:steps-horizontal">
+    <li class="step step-primary">On se connaît</li>
+    <li class="step step-primary">On joue en équipe</li>
+    <li class="step step-primary">On débriefe (rapide)</li>
+    <li class="step step-primary">On passe hors écran</li>
+  </ul>
+</section>
+
+<section class="grid md:grid-cols-2 gap-6 max-w-4xl mx-auto mb-10">
+  <div class="card bg-base-100 shadow"><div class="card-body">
+    <h4 class="card-title">Avec qui venir ?</h4>
+    <p>Seul·e ou avec tes ami·es — on forme des équipes équilibrées.</p>
+  </div></div>
+  <div class="card bg-base-100 shadow"><div class="card-body">
+    <h4 class="card-title">Matériel</h4>
+    <p>Tout est fourni sur place. Tu viens avec ta bonne humeur 😉</p>
+  </div></div>
+</section>
+
+<section class="text-center">
   <div class="join">
-    <a href="contact.html" class="btn btn-primary join-item text-white">Je me pré‑inscris</a>
+    <a href="contact.html" class="btn btn-primary join-item text-white">Je me pré-inscris</a>
     <a href="parents.html" class="btn btn-outline join-item">Convaincre mes parents</a>
   </div>
 </section>
