--- a/educateurs.html
+++ b/educateurs.html
@@ -58,102 +58,51 @@
   <div id="header"></div>
 
   <main class="container">
+<section class="max-w-5xl mx-auto">
+  <h1 class="text-4xl font-extrabold mb-4">Éducateurs & écoles</h1>
+  <p class="text-lg text-gray-700 mb-8">Un cadre clé-en-main pour utiliser le jeu vidéo comme médiation éducative, sans improvisation et sans prise de risque.</p>
 
-<section class="card bg-base-100 shadow mb-8">
-  <div class="card-body">
-    <h2 class="card-title">Notre approche n’est pas “encore plus d’écrans”</h2>
-    <ul class="list-disc ml-5 text-gray-700">
-      <li>Jeux coopératifs et adaptés à l’âge</li>
-      <li>Alternance écran / hors-écran (pauses actives, activités physiques et créatives)</li>
-      <li>Débriefs sur les émotions, la communication et la gestion du temps</li>
-      <li>Transfert vers la vie réelle (maison, école, amis)</li>
-    </ul>
-    <div class="mt-3">
-      <a href="parents.html" class="btn btn-outline">Voir la page Parents</a>
+  <div class="grid md:grid-cols-3 gap-6 mb-8">
+    <div class="card bg-base-100 shadow"><div class="card-body"><h2 class="card-title">Cadre prêt à l’emploi</h2><p>Rituels, séquences, fiches de transfert, hygiène numérique.</p></div></div>
+    <div class="card bg-base-100 shadow"><div class="card-body"><h2 class="card-title">Engagement des élèves</h2><p>Coopération, communication, régulation des émotions via le jeu.</p></div></div>
+    <div class="card bg-base-100 shadow"><div class="card-body"><h2 class="card-title">Accompagnement</h2><p>1 séance pilote accompagnée, supervision optionnelle.</p></div></div>
+  </div>
+
+  <section class="mb-10">
+    <h3 class="text-2xl font-bold mb-3">Comment on démarre ?</h3>
+    <ol class="list-decimal ml-5 text-gray-700 space-y-2">
+      <li>Échange de 20 minutes pour cadrer votre contexte.</li>
+      <li>Séance pilote co-animée.</li>
+      <li>Accès au kit et adaptation à votre établissement.</li>
+    </ol>
+  </section>
+
+  <section class="mb-10">
+    <h3 class="text-2xl font-bold mb-3">Ce que comprend le kit</h3>
+    <div class="grid md:grid-cols-2 gap-6">
+      <div class="card bg-base-100 shadow"><div class="card-body">
+        <ul class="list-disc ml-5 space-y-2">
+          <li>Fiches activités (objectifs, déroulé, critères)</li>
+          <li>Rituels d’ouverture et de clôture</li>
+          <li>Grilles de débrief et de transfert</li>
+        </ul>
+      </div></div>
+      <div class="card bg-base-100 shadow"><div class="card-body">
+        <ul class="list-disc ml-5 space-y-2">
+          <li>Guide hygiène numérique</li>
+          <li>Cadre de gestion de groupe</li>
+          <li>Exemples de plannings</li>
+        </ul>
+      </div></div>
     </div>
+  </section>
+
+  <div class="flex gap-3">
+    <a href="kit-pedagogique.html" class="btn btn-outline">Voir l’aperçu du kit</a>
+    <a href="contact.html" class="btn btn-primary text-white">Demander une démo</a>
   </div>
 </section>
-
-    <section class="section hero">
-      <h1>Un allié pour l'école et les éducateurs</h1>
-      <p>Vous êtes enseignant, directeur d'établissement, ou acteur du monde éducatif ? Cet espace vous est dédié. Découvrez comment la méthode Ludus Mentis crée des ponts entre la passion du jeu vidéo et les compétences essentielles à la réussite scolaire et sociale de vos élèves.</p>
-    </section>
-
-    <section class="section card">
-      <h2>Notre projet pédagogique : du jeu à la compétence</h2>
-      <p>
-        Notre approche ne se contente pas d'occuper les jeunes. Elle s'appuie sur une vision pédagogique structurée pour transformer le temps d'écran en une expérience d'apprentissage active et constructive.
-      </p>
-      <ul>
-        <li>
-          <strong>Une réponse aux enjeux actuels :</strong> Nous comprenons les défis que les écrans posent (isolement, gestion du temps, émotions). Notre cadre est conçu pour y apporter des réponses concrètes et positives.
-        </li>
-        <li>
-          <strong>Une méthodologie éprouvée :</strong> Nous appliquons le <strong>cycle d'apprentissage de Kolb</strong> (action → réflexion → leçon → application). Chaque partie est suivie d'un débriefing guidé où les jeunes analysent leurs actions et développent des stratégies, ancrant durablement les apprentissages.
-        </li>
-        <li>
-          <strong>Le développement de compétences clés :</strong> Notre programme est axé sur les savoir-être fondamentaux du 21e siècle : <strong>collaboration, communication, créativité et résolution de problèmes</strong>.
-        </li>
-      </ul>
-    </section>
-    
-    <section class="section card">
-      <h2>Des ponts concrets avec le monde scolaire</h2>
-      <p>Les compétences que nous développons dans l'arène virtuelle ont une application directe et mesurable dans la salle de classe et la cour de récréation. Voici comment :</p>
-      <div style="display: flex; flex-wrap: wrap; gap: 1em;">
-        <div style="flex: 1; min-width: 280px;">
-          <h4>Communication et collaboration</h4>
-          <ul>
-            <li>Exprimer ses idées clairement lors d'un <strong>exposé oral</strong>.</li>
-            <li>Écouter activement et trouver sa place dans un <strong>travail de groupe</strong>.</li>
-            <li>Donner et recevoir un feedback constructif, sans agressivité.</li>
-          </ul>
-        </div>
-        <div style="flex: 1; min-width: 280px;">
-          <h4>Gestion du stress et persévérance</h4>
-          <ul>
-            <li>Aborder un <strong>contrôle ou un examen</strong> avec plus de sérénité.</li>
-            <li>Gérer la frustration face à un exercice difficile sans abandonner.</li>
-            <li>Apprendre de ses erreurs pour mieux réussir ensuite.</li>
-          </ul>
-        </div>
-        <div style="flex: 1; min-width: 280px;">
-          <h4>Résolution de problèmes et esprit critique</h4>
-          <ul>
-            <li>Analyser une situation complexe (un problème de maths, une expérience scientifique) pour trouver une solution.</li>
-            <li>Anticiper les conséquences de ses actions.</li>
-            <li>Adapter sa stratégie face à un obstacle imprévu.</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <section class="section card" style="text-align:center;">
-        <h2>Notre kit pédagogique</h2>
-        <p>Pour vous permettre de présenter notre projet facilement à vos collègues, à votre direction ou aux parents d'élèves, nous avons synthétisé notre approche dans un document PDF clair et concis.</p>
-        <a href="assets/kit-pedagogique.pdf" class="btn" download>Télécharger présentation Ludus Mentis - kit éducateur (PDF)</a>
-    </section>
-    
-    <section class="section card">
-        <h2>Nos partenaires institutionnels</h2>
-        <p>La crédibilité de notre démarche est renforcée par le soutien d'acteurs locaux et nationaux qui partagent notre vision d'un esport éducatif et citoyen.</p>
-        <div style="display: flex; align-items: center; justify-content: center; gap: 2rem; margin-top: 1.5rem; flex-wrap: wrap;">
-            <img src="assets/images/logo_walhain.png" alt="Logo de la commune de Walhain" style="max-height: 80px; object-fit: contain;">
-            <img src="assets/images/logo_besf.png" alt="Logo de la fédération belge d'esport" style="max-height: 80px; object-fit: contain;">
-        </div>
-    </section>
-
-    <section class="section card">
-      <h2>Construisons un partenariat</h2>
-      <p>Nous sommes convaincus que la collaboration entre les structures éducatives et des initiatives comme la nôtre est essentielle. Nous sommes à votre disposition pour :</p>
-      <ul>
-        <li>Présenter notre projet au sein de votre établissement.</li>
-        <li>Organiser un atelier de démonstration pour un groupe d'élèves.</li>
-        <li>Discuter de toute autre forme de collaboration.</li>
-      </ul>
-      <p style="text-align:center; margin-top:2em;"><a href="contact.html" class="btn">Contactez-nous pour échanger</a></p>
-    </section>
-  </main>
+</main>
 
   <div id="footer"></div>
   <script src="assets/js/include.js"></script>
