--- a/infos-tarifs.html
+++ b/infos-tarifs.html
@@ -82,8 +82,14 @@
         <a href="contact.html" class="btn btn-primary text-white">Poser une question</a>
         <a href="faq.html" class="btn btn-outline">Lire la FAQ</a>
       </div>
-    </section>
-    </main>
+    <div class="mt-6">
+  <h3 class="text-2xl font-bold mb-2">Âge & attestations</h3>
+  <ul class="list-disc ml-5">
+    <li><strong>&lt; 12 ans</strong> : possibilité d’attestation de <em>garde d’enfant</em> disponible en fin d’année.</li>
+    <li>Nous fournissons aussi une <strong>attestation de participation</strong> (mutualités : voir conditions auprès de la vôtre).</li>
+  </ul>
+</div>
+</section></main>
   
   <div id="footer"></div>
   <script src="assets/js/include.js"></script>
