--- a/parents.html
+++ b/parents.html
@@ -72,43 +72,36 @@
   <main class="container mx-auto px-4 py-10">
 <section class="max-w-4xl mx-auto">
   <h1 class="text-4xl font-extrabold mb-6">Pour les parents</h1>
-  <p class="text-lg text-gray-700 mb-8">Notre approche est éducative et structurée. Le jeu vidéo est un <strong>terrain d'entraînement</strong> pour travailler des compétences utiles au quotidien.</p>
+  <p class="text-lg text-gray-700 mb-6">Le jeu est notre <strong>terrain d’entraînement</strong>. On y travaille la communication, la gestion des émotions et le respect des règles — puis on <strong>transfère</strong> vers la vie quotidienne.</p>
 
-  <div class="grid md:grid-cols-2 gap-6 mb-10">
-    <div class="card bg-base-100 shadow">
-      <div class="card-body">
-        <h2 class="card-title">Pourquoi ce n’est pas “encore plus d’écrans” ?</h2>
-        <ul class="list-disc ml-5 space-y-2 text-gray-700">
-          <li>Jeux <strong>sélectionnés</strong> (coopératifs, adaptés à l’âge).</li>
-          <li>Alternance <strong>écran / hors‑écran</strong> (pauses actives, activités physiques et créatives).</li>
-          <li><strong>Débriefs</strong> après chaque séquence : émotions, communication, gestion du temps.</li>
-          <li><strong>Transfert</strong> vers la vie réelle (à la maison, à l’école, avec les amis).</li>
-        </ul>
-      </div>
-    </div>
-    <div class="card bg-base-100 shadow">
-      <div class="card-body">
-        <h2 class="card-title">Et si un suivi clinique est nécessaire ?</h2>
-        <p>Nous ne sommes pas un service thérapeutique. Si des signaux d’alerte apparaissent, nous <strong>orientons</strong> vers des professionnels adaptés. Notre programme reste <strong>pédagogique</strong>, en groupe.</p>
-      </div>
-    </div>
+  <div class="grid md:grid-cols-3 gap-6 mb-8">
+    <div class="card bg-base-100 shadow"><div class="card-body"><h2 class="card-title">Cadre & sécurité</h2><p>Charte, règles d’usage, alternance écran / hors-écran, jeux adaptés à l’âge.</p></div></div>
+    <div class="card bg-base-100 shadow"><div class="card-body"><h2 class="card-title">Approche éducative</h2><p>Débriefs structurés, compétences socio-émotionnelles, pas de contenus violents.</p></div></div>
+    <div class="card bg-base-100 shadow"><div class="card-body"><h2 class="card-title">Orientation si besoin</h2><p>Programme non-thérapeutique. Si nécessaire, nous orientons vers des pros.</p></div></div>
   </div>
 
-  <section class="mb-10">
-    <h3 class="text-2xl font-bold mb-3">Cadre & sécurité</h3>
-    <ul class="list-disc ml-5 space-y-2 text-gray-700">
-      <li>Charte de bienveillance et règles d’usage claires.</li>
-      <li>Autorisation parentale et information transparente.</li>
-      <li>Repérage et orientation si besoin (réseau local en constitution).</li>
+  <section class="mb-8">
+    <h3 class="text-2xl font-bold mb-3">Pourquoi pas “que du sport” ou “un psy” ?</h3>
+    <ul class="list-disc ml-5 text-gray-700 space-y-2">
+      <li><strong>Psychologue des addictions</strong> : utile en cas de souffrance élevée, suivi individuel.</li>
+      <li><strong>Sport classique</strong> : excellent pour le bien-être, mais pas centré sur l’usage du jeu.</li>
+      <li><strong>Ludus Mentis</strong> : pédagogique, en groupe, centré sur l’usage du jeu et le transfert.</li>
     </ul>
   </section>
 
-  <section class="mb-10"><h3 class="text-2xl font-bold mb-3">Questions fréquentes</h3><p class="text-gray-700">Retrouvez toutes les réponses dans notre <a class="link link-primary" href="faq.html">FAQ</a>.</p></section>
+  <section class="mb-8">
+    <h3 class="text-2xl font-bold mb-3">Ce que vous verrez à la maison</h3>
+    <ul class="list-disc ml-5 text-gray-700 space-y-2">
+      <li>Un vocabulaire commun pour parler du temps d’écran.</li>
+      <li>Des règles mieux acceptées (car co-construites en séance).</li>
+      <li>Plus d’écoute et moins de conflits autour du jeu.</li>
+    </ul>
+  </section>
 
   <section class="text-center">
     <div class="join">
       <a href="contact.html" class="btn btn-primary join-item text-white">Parler à un coach (15 min)</a>
-      <a href="infos-tarifs.html" class="btn btn-outline join-item">Voir les infos & tarifs</a>
+      <a href="infos-tarifs.html" class="btn btn-outline join-item">Infos & tarifs</a>
     </div>
   </section>
 </section>
