--- a/faq.html
+++ b/faq.html
@@ -58,40 +58,43 @@
   <div id="header"></div>
   
   <main class="container mx-auto px-4 py-10">
-    <section class="max-w-4xl mx-auto">
-      <h1 class="text-4xl font-extrabold mb-6">FAQ</h1>
-      <div class="join join-vertical w-full">
-        <div class="collapse collapse-arrow join-item border border-base-300">
-          <input type="checkbox" />
-          <div class="collapse-title text-lg font-medium">Est‑ce adapté si mon enfant joue « trop » ?</div>
-          <div class="collapse-content"><p>Notre cadre aide à réguler les usages grâce à des règles claires, des pauses, et un travail sur les compétences (gestion du temps, communication). En cas de souffrance, nous orientons vers des professionnels.</p></div>
-        </div>
-        <div class="collapse collapse-arrow join-item border border-base-300">
-          <input type="checkbox" />
-          <div class="collapse-title text-lg font-medium">Est‑ce une thérapie ?</div>
-          <div class="collapse-content"><p>Non. C’est un programme éducatif de groupe. Nous ne posons pas de diagnostic et ne réalisons pas de suivi clinique.</p></div>
-        </div>
-        <div class="collapse collapse-arrow join-item border border-base-300">
-          <input type="checkbox" />
-          <div class="collapse-title text-lg font-medium">Y a‑t‑il des jeux violents ?</div>
-          <div class="collapse-content"><p>Non. Les jeux sont sélectionnés pour leur dimension coopérative et leur adéquation à l’âge.</p></div>
-        </div>
-        <div class="collapse collapse-arrow join-item border border-base-300">
-          <input type="checkbox" />
-          <div class="collapse-title text-lg font-medium">Comment se passe une séance ?</div>
-          <div class="collapse-content"><p>Rituels d’ouverture, séquence de jeu encadrée, débrief (émotions, communication, règles), puis activité hors‑écran et transfert vers le quotidien.</p></div>
-        </div>
-        <div class="collapse collapse-arrow join-item border border-base-300">
-          <input type="checkbox" />
-          <div class="collapse-title text-lg font-medium">Et si ça ne convient pas ?</div>
-          <div class="collapse-content"><p>On en parle. Nous proposons des ajustements et, si nécessaire, des pistes d’orientation.</p></div>
-        </div>
-      </div>
-      <div class="mt-8">
-        <a href="contact.html" class="btn btn-primary text-white">Je pose ma question</a>
-      </div>
-    </section>
-    </main>
+<section class="max-w-4xl mx-auto">
+  <h1 class="text-4xl font-extrabold mb-6">FAQ</h1>
+  <div class="join join-vertical w-full">
+    
+<div class="collapse collapse-arrow join-item border border-base-300">
+  <input type="checkbox" />
+  <div class="collapse-title text-lg font-medium">Une question non couverte ?</div>
+  <div class="collapse-content"><p>Voir détails sur la page Ressources/Enjeux ou contactez-nous pour un point rapide.</p></div>
+</div>
+
+    <!-- Core questions kept -->
+    <div class="collapse collapse-arrow join-item border border-base-300">
+      <input type="checkbox" />
+      <div class="collapse-title text-lg font-medium">Est-ce adapté si mon enfant joue « trop » ?</div>
+      <div class="collapse-content"><p>Oui, dans un cadre éducatif. En cas de souffrance importante, nous orientons vers des professionnels.</p></div>
+    </div>
+    <div class="collapse collapse-arrow join-item border border-base-300">
+      <input type="checkbox" />
+      <div class="collapse-title text-lg font-medium">Est-ce une thérapie ?</div>
+      <div class="collapse-content"><p>Non. Programme pédagogique de groupe, sans diagnostic clinique.</p></div>
+    </div>
+    <div class="collapse collapse-arrow join-item border border-base-300">
+      <input type="checkbox" />
+      <div class="collapse-title text-lg font-medium">Y a-t-il des jeux violents ?</div>
+      <div class="collapse-content"><p>Non, sélection coopérative et adaptée à l’âge.</p></div>
+    </div>
+    <div class="collapse collapse-arrow join-item border border-base-300">
+      <input type="checkbox" />
+      <div class="collapse-title text-lg font-medium">Comment se passe une séance ?</div>
+      <div class="collapse-content"><p>Rituels, séquence encadrée, débrief, activité hors écran, transfert.</p></div>
+    </div>
+  </div>
+  <div class="mt-8">
+    <a href="contact.html" class="btn btn-primary text-white">Je pose ma question</a>
+  </div>
+</section>
+</main>
   
   <div id="footer"></div>
   <script src="assets/js/include.js"></script>
