--- a/mentions.html
+++ b/mentions.html
@@ -1,7 +1,82 @@
 <!DOCTYPE html>
 <html lang="fr" data-theme="autumn">
-<head> <meta charset="UTF-8"> <!-- Google Tag Manager --> <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-WMCMP74V');</script> <!-- End Google Tag Manager --> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Mentions légales | Ludus Mentis</title> <meta name="description" content="Consultez les mentions légales de l'association Ludus Mentis ASBL."> <!-- DaisyUI + Tailwind CSS --> <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" /> <script src="https://cdn.tailwindcss.com"></script> <!-- Configuration Tailwind --> <script> tailwind.config = { darkMode: 'class', theme: { extend: { colors: { primary: '#fb923c', 'primary-focus': '#ea580c', secondary: '#fbbf24', accent: '#ef4444', }, fontFamily: { 'sans': ['Inter', 'system-ui', '-apple-system', 'sans-serif'], 'display': ['Space Grotesk', 'system-ui', 'sans-serif'], } } } } </script> <!-- Fonts --> <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet"> <!-- Custom styles --> <link rel="stylesheet" href="assets/css/styles.css"> <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
+<head>
+  <meta charset="UTF-8">
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
+  <!-- End Google Tag Manager -->
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mentions légales | Ludus Mentis</title>
+  <meta name="description" content="Consultez les mentions légales de l'association Ludus Mentis ASBL.">
+  
+  <!-- DaisyUI + Tailwind CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  
+  <!-- Configuration Tailwind -->
+  <script>
+    tailwind.config = {
+      darkMode: 'class',
+      theme: {
+        extend: {
+          colors: {
+            primary: '#fb923c',
+            'primary-focus': '#ea580c',
+            secondary: '#fbbf24',
+            accent: '#ef4444',
+          },
+          fontFamily: {
+            'sans': ['Inter', 'system-ui', '-apple-system', 'sans-serif'],
+            'display': ['Space Grotesk', 'system-ui', 'sans-serif'],
+          }
+        }
+      }
+    }
+  </script>
+  
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
+  
+  <!-- Custom styles -->
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
-<body class="min-h-screen bg-base-100"> <!-- Google Tag Manager (noscript) --> <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> <!-- End Google Tag Manager (noscript) --> <div id="header"></div> <main class="container"> <section class="section card"> <h1>Mentions légales</h1> <p>Ludus Mentis – Association à but non lucratif (ASBL)<br> Siège social : Walhain, Belgique<br> Email : info@ludusmentis.be<br> Responsable de publication : Antoine Billard<br></p> </section> <section class="section card"> <h2>Propriété intellectuelle</h2> <p>Le contenu de ce site (textes, images, logos…) est protégé par le droit d'auteur. Toute reproduction est interdite sans accord écrit.</p> </section> <section class="section card"> <h2>Cookies et données personnelles</h2> <p>Aucune donnée personnelle n'est collectée à votre insu. Les cookies éventuels servent uniquement au bon fonctionnement du site.</p> </section> </main> <div id="footer"></div> <script src="assets/js/include.js"></script>
+<body class="min-h-screen bg-base-100">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  
+  <div id="header"></div>
+  
+  <main class="container">
+    <section class="section card">
+      <h1>Mentions légales</h1>
+      <p>Ludus Mentis – Association à but non lucratif (ASBL)<br>
+        Siège social : Walhain, Belgique<br>
+        Email : info@ludusmentis.be<br>
+        Responsable de publication : Antoine Billard<br></p>
+    </section>
+
+    <section class="section card">
+      <h2>Propriété intellectuelle</h2>
+      <p>Le contenu de ce site (textes, images, logos…) est protégé par le droit d'auteur. Toute reproduction est interdite sans accord écrit.</p>
+    </section>
+
+    <section class="section card">
+      <h2>Cookies et données personnelles</h2>
+      <p>Aucune donnée personnelle n'est collectée à votre insu. Les cookies éventuels servent uniquement au bon fonctionnement du site.</p>
+    </section>
+  </main>
+  
+  <div id="footer"></div>
+  <script src="assets/js/include.js"></script>
 </body>
 </html>
