--- a/enjeux.html
+++ b/enjeux.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" data-theme="autumn">
+<html lang="fr" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <!-- Google Tag Manager -->
@@ -13,7 +13,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enjeux des jeux vidéo : chiffres et solutions | Ludus Mentis</title>
     <meta name="description" content="Analyse détaillée des enjeux liés aux jeux vidéo chez les jeunes : statistiques, risques et nos solutions concrètes pour un gaming positif.">
-    <meta name="keywords" content="enjeux jeux vidéo, statistiques gaming, gaming disorder, solutions parents, équilibre numérique">
+    <meta name="keywords" content="stage jeux vidéo, coaching esport, adolescent, Walhain, activité extra-scolaire, développement personnel">
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Ludus Mentis",
+      "description": "Programme d'ateliers de jeux vidéo éducatifs pour adolescents de 10 à 15 ans à Walhain",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Walhain",
+        "addressRegion": "Wallonie",
+        "addressCountry": "BE"
+      },
+      "url": "https://ludusmentis.be/",
+      "email": "info@ludusmentis.be",
+      "areaServed": "Belgique"
+    }
+    </script>
     
     <!-- DaisyUI + Tailwind CSS -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -26,9 +44,9 @@
         theme: {
           extend: {
             colors: {
-              primary: '#ea580c',
-              'primary-focus': '#c2410c',
-              secondary: '#f59e0b',
+              primary: '#fb923c',
+              'primary-focus': '#ea580c',
+              secondary: '#fbbf24',
               accent: '#ef4444',
             },
             fontFamily: {
@@ -57,7 +75,7 @@
     
     <div id="header"></div>
 
-    <main class="container mx-auto px-4 py-8">
+    <main class="container mx-auto px-4 py-8 container mx-auto px-4 py-8">
         <!-- Hero Section -->
         <section class="hero bg-gradient-to-br from-orange-50 to-amber-50 rounded-3xl p-8 lg:p-12 mb-8 border-2 border-orange-200">
             <div class="max-w-4xl mx-auto text-center">
