--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" data-theme="autumn">
+<html lang="fr" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <!-- Google Tag Manager -->
@@ -66,6 +66,7 @@
     <!-- Custom styles -->
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
+<link rel="stylesheet" href="assets/css/harmonize.css">
 </head>
 <body class="min-h-screen bg-base-100">
     <!-- Google Tag Manager (noscript) -->
